[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Equipment/Lockpick.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.333333, 0.313726, 0.313726, 1 )

[node name="Lockpick" type="StaticBody"]
collision_layer = 4
script = ExtResource( 1 )

[node name="InteractionRange" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Lock" type="CSGBox" parent="."]
width = 0.1
height = 0.1
depth = 0.05

[node name="RotationPin" type="Spatial" parent="."]

[node name="Pick" type="CSGBox" parent="RotationPin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.04, 0.03 )
visible = false
width = 0.01
height = 0.07
depth = 0.01
material = SubResource( 2 )

[node name="RotationUnlock" type="Spatial" parent="."]

[node name="Pick" type="CSGBox" parent="RotationUnlock"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.04, 0.03 )
visible = false
width = 0.01
height = 0.07
depth = 0.01
material = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.32218 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
